# browser-use-cli

./: .gitignore  README.md  analyze_trace.py  demo_logging.py  pyproject.toml  pytest.ini  pytest_output.txt  test_gemini_connection.py  test_results.txt  webui.py
cli/: README.md  __init__.py  browser-tasks-example.ts  browser-use  browser-use.toolchain.json  browser_use_cli.py  usage-guide.md
docs/: enhanced_tracing.md
src/: __init__.py  trace_analyzer.py
src/agent/: custom_agent.py  custom_prompts.py
src/browser/: custom_context.py
src/controller/: custom_controller.py
src/utils/: browser_controller.py  error_handling.py  logging.py  structured_logging.py  task_logging.py  utils.py
tests/: __init__.py  requirements-test.txt  test_api.py  test_browser_cli.py  test_browser_controller.py  test_browser_use_cli.py  test_browser_vision.py  test_enhanced_tracing.py  test_error_handling.py  test_llm_api.py  test_llm_integration.py  test_logging.py  test_logging_integration.py  test_structured_logging.py  test_task_logging.py  test_trace_analyzer.py
